# mlp-cave

./: README.md  main.py  pyproject.toml
datasets/basic/: PA-A_training_data_01.txt  PA-A_training_data_02.txt  PA-A_training_data_03.txt  PA-A_training_data_04.txt  PA-A_training_data_05.txt  PA-A_training_data_06.txt
examples/: mnist.py  mnist_reversed.py  mnist_reversed_render.py  mnist_reversed_train.py
mlp/: __init__.py  loaders.py  network.py  types.py
models/mnist/: mnist.mlp
models/mnist-reversed/: mnist-reversed.mlp
